--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,30 +14,30 @@
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.cs3025.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_todo_list"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.cs3025.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_create_task"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_tools"
         android:name="com.cs3025.ui.tools.ToolsFragment"
-        android:label="@string/menu_tools"
+        android:label="@string/menu_incoming"
         tools:layout="@layout/fragment_tools" />
 
     <fragment
         android:id="@+id/nav_share"
         android:name="com.cs3025.ui.share.ShareFragment"
-        android:label="@string/menu_share"
+        android:label="@string/menu_pending"
         tools:layout="@layout/fragment_share" />
 
     <fragment
         android:id="@+id/nav_send"
         android:name="com.cs3025.ui.send.SendFragment"
-        android:label="@string/menu_send"
+        android:label="@string/menu_settings"
         tools:layout="@layout/fragment_send" />
 </navigation>
