--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="Task Name"
         android:textSize="18dp"
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="40dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="150dp"
         android:text="Task Description"
         android:textSize="18dp"
@@ -53,7 +53,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="180dp"
         android:layout_marginEnd="0dp">
 
@@ -72,10 +72,103 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="290dp"
         android:text="Assign To:"
         android:textSize="18dp"
         android:textStyle="bold" />
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="320dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/user"
+                android:layout_width="@dimen/user_image_width"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+            <TextView
+                android:id="@+id/user13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_person_black_24dp"
+                android:text="@string/user_name" />
+
+        </LinearLayout>
+    </HorizontalScrollView>
 
 </RelativeLayout>
