--- a/app/src/main/res/layout/fragment_tools.xml
+++ b/app/src/main/res/layout/fragment_tools.xml
@@ -11,5 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="700dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="20dp"
+        android:padding="10dp"
+        />
 </RelativeLayout>
