--- a/app/src/main/res/layout/activity_exist_house.xml
+++ b/app/src/main/res/layout/activity_exist_house.xml
@@ -82,7 +82,8 @@
         app:layout_constraintHorizontal_bias="0.522"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.176" />
+        app:layout_constraintVertical_bias="0.176"
+        android:singleLine="true"/>
 
     <Button
         android:id="@+id/next"
@@ -92,7 +93,7 @@
         android:layout_marginBottom="88dp"
         android:background="@drawable/button_round_blue"
 
-        android:enabled="false"
+        android:enabled="true"
         android:text="next"
         android:textColor="#ffff"
         app:layout_constraintBottom_toBottomOf="parent"
