--- a/app/src/main/res/layout/activity_house_select.xml
+++ b/app/src/main/res/layout/activity_house_select.xml
@@ -43,7 +43,7 @@
         android:layout_gravity="start"
         android:layout_marginTop="24dp"
         android:background="@drawable/button_round_blue"
-        android:enabled="false"
+        android:enabled="true"
         android:text="Create New House"
 
         android:textColor="#ffff"
@@ -55,20 +55,20 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/exist_house"
-        android:layout_width="282dp"
-        android:layout_height="53dp"
-        android:layout_gravity="start"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/button_round_blue"
-        android:enabled="false"
-        android:text="Join Existing House"
+    android:id="@+id/exist_house"
+    android:layout_width="282dp"
+    android:layout_height="53dp"
+    android:layout_gravity="start"
+    android:layout_marginTop="36dp"
+    android:background="@drawable/button_round_blue"
+    android:enabled="true"
+    android:text="Join Existing House"
 
-        android:textColor="#ffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_house"
-        app:layout_constraintVertical_bias="0.0" />
+    android:textColor="#ffff"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.503"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/new_house"
+    app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
