--- a/app/src/main/res/layout/activity_new_house.xml
+++ b/app/src/main/res/layout/activity_new_house.xml
@@ -24,7 +24,7 @@
         android:layout_width="366dp"
         android:layout_height="178dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="44dp"
         android:src="@drawable/white_line"
         android:tint="#ffff"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:layout_gravity="start"
         android:layout_marginTop="48dp"
         android:background="@drawable/button_round_blue"
-        android:enabled="false"
+        android:enabled="true"
 
         android:text="next"
         android:textColor="#ffff"
