--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,13 +15,13 @@
         android:id="@+id/nav_gallery"
         android:name="com.cs3025.ui.todolist.TodoListFragment"
         android:label="@string/menu_todo_list"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_todolist" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.cs3025.ui.slideshow.SlideshowFragment"
+        android:name="com.cs3025.ui.create_task.CreateTaskFragment"
         android:label="@string/menu_create_task"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_create_task" />
 
     <fragment
         android:id="@+id/nav_tools"
@@ -31,9 +31,9 @@
 
     <fragment
         android:id="@+id/nav_share"
-        android:name="com.cs3025.ui.share.ShareFragment"
+        android:name="com.cs3025.ui.pending_task.PendingTaskFragment"
         android:label="@string/menu_pending"
-        tools:layout="@layout/fragment_share" />
+        tools:layout="@layout/fragment_pending_task" />
 
     <fragment
         android:id="@+id/nav_send"
